--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@adopisoft/ts-if-env",
   "version": "0.0.1",
   "description": "Remove blocks of code base on Nodes.js' process.env",
-  "main": "index.ts",
+  "main": "./dist/index.js",
   "scripts": {
+    "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +22,11 @@
     "url": "https://github.com/AdoPiSoft/ts-if-env/issues"
   },
   "homepage": "https://github.com/AdoPiSoft/ts-if-env#readme",
-  "devDependencies": {
+  "peerDependencies": {
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
   }
 }
