--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@adopisoft/ts-if-env",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Remove blocks of code base on Nodes.js' process.env",
   "main": "./dist/index.js",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "import": "./index.ts",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
     "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
