--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,13 @@
   ],
   "compilerOptions": {
     "outDir": "dist",
+    "target": "es2021",
+    "module": "commonjs",
+    "lib": [
+      "es2021"
+    ],
+    "moduleResolution": "node16",
+    "esModuleInterop": true,
     "declaration": true,
     "declarationMap": true,
     "strictNullChecks": true
