--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adopisoft/remove-if-env",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Remove blocks of code base on Nodes.js' process.env",
   "main": "./dist/index.js",
   "type": "commonjs",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AdoPiSoft/ts-if-env.git"
+    "url": "git+https://github.com/AdoPiSoft/remove-if-env.git"
   },
   "keywords": [
     "typescript",
