--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@adopisoft/remove-if-env",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Remove blocks of code base on Nodes.js' process.env",
-  "main": "./dist/src/index.js",
+  "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "postinstall": "npx tsc",
+    "build": "npx tsc",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
