--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   ],
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "target": "es2021",
     "module": "commonjs",
     "lib": [
