--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adopisoft/remove-if-env",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A typescript transform plugin that removes blocks of code base on Nodes.js' process.env",
   "main": "./dist/index.js",
   "type": "commonjs",
@@ -24,11 +24,8 @@
     "url": "https://github.com/AdoPiSoft/remove-if-env/issues"
   },
   "homepage": "https://github.com/AdoPiSoft/remove-if-env#readme",
-  "peerDependencies": {
-    "ts-node": "^10.9.1",
-    "ttypescript": "^1.5.13"
-  },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "typescript": "^4.8.4"
   }
 }
